{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 206,
  "lineage": "5b648c07-de86-1c96-0d83-623bfbf3b307",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bc1cb58d3a7ab8b2",
            "public_dns": "ec2-18-158-102-73.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.102.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-034ffd402238b8801",
            "public_dns": "ec2-18-158-134-78.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.134.78",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:internet-gateway/igw-067614555e927c0cd",
            "id": "igw-067614555e927c0cd",
            "owner_id": "407765914917",
            "tags": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc1cb58d3a7ab8b2",
            "id": "nat-0ef0e8b2a552222fe",
            "network_interface_id": "eni-04fbb1e700fc8ad55",
            "private_ip": "10.14.1.132",
            "public_ip": "18.158.102.73",
            "subnet_id": "subnet-0f717912e491ffbcd",
            "tags": {
              "Name": "nat gw for privet net 0"
            }
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034ffd402238b8801",
            "id": "nat-027c0ac5c112e1840",
            "network_interface_id": "eni-0d789285affc3e7bf",
            "private_ip": "10.14.2.49",
            "public_ip": "18.158.134.78",
            "subnet_id": "subnet-003c6444236dd7785",
            "tags": {
              "Name": "nat gw for privet net 1"
            }
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0167ead190b267baf",
            "owner_id": "407765914917",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ef0e8b2a552222fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat internet access"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_nat_gateway.natgw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0974ff1ceae37fdb8",
            "owner_id": "407765914917",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-027c0ac5c112e1840",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat internet access"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_nat_gateway.natgw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c38577196351d202",
            "owner_id": "407765914917",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067614555e927c0cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internet access"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f060a50f8b2aea9e",
            "route_table_id": "rtb-0167ead190b267baf",
            "subnet_id": "subnet-0bb74ce4dd7ee1510"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085a8167dbdd9e38e",
            "route_table_id": "rtb-0974ff1ceae37fdb8",
            "subnet_id": "subnet-00bb95094d611ba8a"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publ",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03373522b055aaef1",
            "route_table_id": "rtb-0c38577196351d202",
            "subnet_id": "subnet-0f717912e491ffbcd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.r",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f3680216d24306",
            "route_table_id": "rtb-0c38577196351d202",
            "subnet_id": "subnet-003c6444236dd7785"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.r",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:security-group/sg-0781ddc72334ad5d1",
            "description": "allow_cust_ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0781ddc72334ad5d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for web servers 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for web servers 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for web servers 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_cust_ports",
            "name_prefix": null,
            "owner_id": "407765914917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_cust_ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:subnet/subnet-0bb74ce4dd7ee1510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.14.11.0/24",
            "id": "subnet-0bb74ce4dd7ee1510",
            "map_public_ip_on_launch": false,
            "owner_id": "407765914917",
            "tags": {
              "Name": "private-network 1"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:subnet/subnet-00bb95094d611ba8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.14.22.0/24",
            "id": "subnet-00bb95094d611ba8a",
            "map_public_ip_on_launch": false,
            "owner_id": "407765914917",
            "tags": {
              "Name": "private-network 2"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:subnet/subnet-0f717912e491ffbcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.14.1.0/24",
            "id": "subnet-0f717912e491ffbcd",
            "map_public_ip_on_launch": true,
            "owner_id": "407765914917",
            "tags": {
              "Name": "public-network 1"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:subnet/subnet-003c6444236dd7785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.14.2.0/24",
            "id": "subnet-003c6444236dd7785",
            "map_public_ip_on_launch": true,
            "owner_id": "407765914917",
            "tags": {
              "Name": "public-network 2"
            },
            "vpc_id": "vpc-0069af323e0df9dc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:407765914917:vpc/vpc-0069af323e0df9dc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.14.0.0/16",
            "default_network_acl_id": "acl-0e99bd54316e05f20",
            "default_route_table_id": "rtb-0286bddc1f4f6f2d4",
            "default_security_group_id": "sg-03c5db7fbc54d6fca",
            "dhcp_options_id": "dopt-8870d4e2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0069af323e0df9dc4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0286bddc1f4f6f2d4",
            "owner_id": "407765914917",
            "tags": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}